Update branch feature MainPageRoute

--- a/MundoAFora/MundoAFora.csproj
+++ b/MundoAFora/MundoAFora.csproj
@@ -68,6 +68,9 @@
 	  <MauiXaml Update="CadastroUsuario.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="HomePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Login.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
